Bug 2785 - Several Fixes for Trident BLADEXP
Summary: Several Fixes for Trident BLADEXP
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Trident (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: high normal
Assignee: Egbert Eich
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-03-22 06:08 UTC by Egbert Eich
Modified: 2006-02-01 06:50 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
See comment above. (10.61 KB, patch)
2005-03-22 06:10 UTC, Egbert Eich
no flags Details | Splinter Review
Previous patch contained some debugging stuff which will prevent driver from compiling. (10.81 KB, patch)
2005-03-22 07:03 UTC, Egbert Eich
no flags Details | Splinter Review

Description Egbert Eich 2005-03-22 06:08:42 UTC
The patch that's going to be attached fixes several issues of the Trident BladeXP
on a Toshiba Tecra 8200.
It attempts to detect the display size automatically from DDC (It assumes if
there is a 1450x1050 digital display listed in DDC that this is the actual panel
size.) 
Furthermore it fixes several issues: 8bit depth should not use multiplexing,
HW cursor is truecolor always, BIOS modes for display output switching, video).
Comment 1 Egbert Eich 2005-03-22 06:10:40 UTC
Created attachment 2183 [details] [review]
See comment above.

Alan, do you have a datasheet for the BladeXP? Maybe if you have some time you
can verify that the changes are valid.
Comment 2 Egbert Eich 2005-03-22 07:03:13 UTC
Created attachment 2185 [details] [review]
Previous patch contained some debugging stuff which will prevent driver from compiling.
Comment 3 Alan Hourihane 2005-03-23 10:37:16 UTC
What was the reason for the MUXThreshold change for the BladeXP ?

Maybe the MUXThreshold should be increased instead of being disabled completely.
I'll check my docs though.
Comment 4 Denny Tjahyadi 2005-12-12 02:16:20 UTC
Not working with portege r 100 -> 1024x768 resolution
still got the blue screen when playing video
Comment 5 Alan Hourihane 2006-02-02 01:50:42 UTC
Committed. Thanks Egbert.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.