Commit patch from https://bugs.freedesktop.org/show_bug.cgi?id=2785 i.e.     detect 1400x1050 panels from DDC information and a few other fixes for     BladeXP chipsets - notably the Toshiba Tecra 8200.